--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
+    "@planetscale/database": "^1.19.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -39,19 +40,26 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "latest",
     "@tanstack/react-table": "latest",
+    "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
+    "@types/mysql": "^2.15.27",
+    "@vercel/postgres-kysely": "^0.10.0",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^5.1.1",
     "chart.js": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
+    "drizzle-kit": "^0.31.0",
+    "drizzle-orm": "0.28.6",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "immer": "latest",
     "input-otp": "1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
+    "mysql2": "^3.14.0",
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
@@ -64,6 +72,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "use-sync-external-store": "latest",
     "uuid": "latest",
     "vaul": "^0.9.6",
